# engdados-databricks

./: 01-landing.ipynb  01-pipeline-minio-delta.ipynb  02-bronze.ipynb  03-silver.ipynb  04-gold.ipynb  05-destroy.ipynb  404.html  README.md  docker-compose.yml  init.sql  mkdocs.yml  pyproject.toml  sitemap.xml
.ipynb_checkpoints/: README-checkpoint.md  mkdocs-checkpoint.yml
automacao/: index.html
conclusao/: index.html
data/: clientes.csv  part-00000-df7196eb-e5fc-4241-bb2c-6926d87f19f3-c000.csv  produtos.csv  vendas.csv
delta/: index.html
docs/: 404.html  delta.md  index.html  index.md  minio.md  spark.md
docs/arquitetura/: index.html
docs/bronze/: index.html
docs/search/: search_index.json
gold/: index.html
landing/: index.html
minio/: index.html
search/: search_index.json
silver/: index.html
site/: 404.html  index.html  sitemap.xml
site/gold/: index.html
site/landing/: index.html
site/silver/: index.html
spark/: index.html
