[project]
name = "trabalho2-spark-minio"
version = "0.1.0"
description = "Apache Spark com MinIO, PostgreSQL e Delta Lake - Trabalho 2"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "jupyterlab>=4.1",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "python-dotenv>=1.2.2",
]
